Aug 03 2007  devel  Tweaks to Darwin source handling
Jul 25 2007  devel  First pass at battery support for Darwin
Jul 24 2007  devel  Backported WEP display from newcore to only show WEP if no
                     expanded crypto options are available
                    Fixed lurking bug where networks with WPA improperly got
                     WEP40 set as well
Jul 23 2007  devel  Added madwifi-ng support for Linux-2.4
                    Added vap teardown code for madwifi-ng
                    Updated README
Jul 22 2007  devel  Revamped channel fetching system to use last ack'd set, rather
                     than fetching live.  This should reduce the load by 4 or 5
                     syscalls per packet, a good thing.  (And enable channel display
                     on Darwin capture sources)
                    Throttled channel control down to the rate at which it can 
                     acknowledge that a set succeeded
Jul 21 2007  devel  Added Darwin card type detection to properly use Broadcom cards
                    Added Darwin channel control
Jul 04 2007  devel  Added beginnings of Darwin support for OSX-Intel (atheros)
May 30 2007  devel  Removed airpcap radiotap set since it results in
                     non-deterministic behavior on some configurations
Mar 07 2007  devel  Aliased rt73 source (same as rt2500)
Feb 13 2007  devel  Fixed scrolling (again)
                    Added ifconfig down to wext monitor mode for dscape
Feb 10 2007  devel  Fixed long-standing bug in new network info in 
                     kismet_client
Feb 08 2007  devel  Fixed scrolling in kismet_client
                    Fixed handling of bursty traffic in kismet_client
                    Fixed gpsd parsing when lock forcing is used
                    Merged patch from Alan Grow for RSSI and better signal
                     plotting in kismet_client
Feb 07 2007  devel  Fixed mis-detecting some networks as WEP