@@ -1,3 +1,5 @@
+Aug 18 2007  devel  Aliased b43/b43legacy for broadcom driver split
+Aug 13 2007  devel  Aliased iwl3945 for ipw3945
 Aug 03 2007  devel  Tweaks to Darwin source handling
 Jul 25 2007  devel  First pass at battery support for Darwin
 Jul 24 2007  devel  Backported WEP display from newcore to only show WEP if no
